实现基础的动态功能，并改进授权中间件
